# multichat

./: Cargo.toml
.github/workflows/: docs.yml
multichat-client/: Cargo.toml
multichat-client/src/: builder.rs  client.rs  lib.rs  net.rs  text.rs  tls.rs
multichat-proto/: Cargo.toml
multichat-proto/src/: access_token.rs  client.rs  lib.rs  server.rs  text.rs  version.rs  wire.rs
multichat-server/: Cargo.toml
multichat-server/example/: config.toml
multichat-server/src/: config.rs  main.rs  server.rs  tls.rs
multichat-server/systemd/: multichat-server.service
multichat-telegram/: Cargo.toml
multichat-telegram/example/: config.toml
multichat-telegram/src/: config.rs  main.rs  markdown_safe.rs  multichat.rs  telegram.rs  tls.rs
multichat-telegram/systemd/: multichat-telegram.service
multichat-tui/: Cargo.toml
multichat-tui/src/: command.rs  logging.rs  main.rs  screen.rs  term_safe.rs  tui.rs
multichat-tui/src/command/: args.rs
multichat-tui/src/screen/: input.rs  log.rs
