[package]
name = "multichat-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["macros", "net", "sync", "rt"] }
tokio-native-tls = { version = "0.3.0", optional = true }
multichat-proto = { path = "../multichat-proto" }
async-trait = "0.1.50"

[features]
default = ["tls"]
tls = ["tokio-native-tls"]
