[package]
name = "multichat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["macros", "net", "sync", "rt"] }
tokio-rustls = { version = "0.26.0", optional = true }

multichat-proto = { path = "../multichat-proto" }

[features]
default = ["tls"]
tls = ["tokio-rustls"]
