[package]
name = "multichat-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multichat-proto = { path = "../multichat-proto" }

tokio = { version = "1.15.0", features = ["macros", "net", "sync", "rt", "time"] }
tokio-rustls = { version = "0.26.0", optional = true }
thiserror = "2.0.3"

[features]
default = ["tls"]
tls = ["tokio-rustls"]
