[package]
name = "multichat-proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.15.5"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.6.1", features = ["io-util"] }
