[package]
name = "multichat-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.15.5"
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt"] }
