[package]
name = "multichat-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.15.0", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt"] }
