[package]
name = "multichat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jan Trefil <hjantrefil@gmail.com>"]
description = "Multichat server"

[package.metadata.deb]
maintainer-scripts = "systemd/"
systemd-units = { enable = true }
assets = [
    { source = "example/config.toml", dest = "usr/share/multichat/server.toml", mode = "644" },
    { source = "example/config.toml", dest = "etc/multichat/server.toml", mode = "644" },
    { source = "target/release/multichat-server", dest = "usr/bin/multichat-server", mode = "755" }
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread", "fs", "net", "sync"] }
toml = "0.5.8"
serde = { version = "1.0.133", features = ["derive"] }
tokio-rustls = "0.26.0"
slab = "0.4.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "2.0.3"
rustls-pemfile = "2.2.0"

multichat-proto = { path = "../multichat-proto" }

