[package]
name = "multichat-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
teloxide = { version = "0.13.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "2.0.3"
rustls = "0.23.16"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.0"

multichat-client = { path = "../multichat-client" }
