[package]
name = "multichat-telegram"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jan Trefil <hjantrefil@gmail.com>"]
description = "Multichat Telegram bridge"

[package.metadata.deb]
maintainer-scripts = "systemd/"
systemd-units = { enable = true }
assets = [
    { source = "example/config.toml", dest = "usr/share/multichat/telegram.toml", mode = "644" },
    { source = "example/config.toml", dest = "etc/multichat/telegram.toml", mode = "644" },
    { source = "target/release/multichat-telegram", dest = "usr/bin/multichat-telegram", mode = "755" }
]

[dependencies]
multichat-client = { path = "../multichat-client" }

clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
teloxide = { version = "0.13.0", default-features = false, features = ["rustls", "ctrlc_handler"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "2.0.3"
rustls = "0.23.16"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.0"