[package]
name = "multichat-tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["macros", "io-std", "rt-multi-thread", "time"] }
structopt = "0.3.25"
crossterm = { version = "0.22.1", features = ["event-stream"] }
futures = "0.3.19"
multichat-client = { path = "../multichat-client" }
