[package]
name = "multichat-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multichat-client = { path = "../multichat-client" }

tokio = { version = "1.15.0", features = ["macros", "io-std", "rt-multi-thread", "time"] }
structopt = "0.3.25"
crossterm = { version = "0.22.1", features = ["event-stream"] }
futures = "0.3.19"
thiserror = "2.0.0"